# voice-to-text

./: .gitignore  GITHUB_ABOUT.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-telegram.txt  requirements.txt
examples/: telegram_bot.py
tests/: __init__.py  conftest.py  test_cli.py  test_formats.py  test_telegram.py  test_transcriber.py  test_utils.py
voice_to_text/: __init__.py  cli.py  formats.py  transcriber.py  utils.py
voice_to_text/integrations/: README.md  __init__.py  telegram.py
