[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-to-text"
dynamic = ["version"]
description = "Bulk voice message transcription using Whisper. Telegram, WhatsApp, batch processing, CLI & Python API."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Roman Gordienko"},
]
keywords = [
    "whisper", "speech-to-text", "transcription", "telegram",
    "voice-messages", "faster-whisper", "batch-processing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "openai-whisper>=20231117",
    "click>=8.0",
    "rich>=13.0",
    "pydub>=0.25.0",
]

[project.optional-dependencies]
faster = ["faster-whisper>=1.0.0"]
api = ["openai>=1.0"]
groq = ["groq>=0.4.0"]
telegram = ["aiogram>=3.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "faster-whisper>=1.0.0",
    "openai>=1.0",
]
all = [
    "faster-whisper>=1.0.0",
    "openai>=1.0",
    "groq>=0.4.0",
    "aiogram>=3.0.0",
]

[project.urls]
Homepage = "https://audiotools.dev"
Repository = "https://github.com/raxod/voice-to-text"
Issues = "https://github.com/raxod/voice-to-text/issues"

[project.scripts]
vtt = "voice_to_text.cli:main"

[tool.setuptools.dynamic]
version = {attr = "voice_to_text.__version__"}

[tool.setuptools.packages.find]
include = ["voice_to_text*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring real models",
]
